SERVER-53852 MongoDB hangs randomly